sysdigcloud/policy-advisor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sysdigcloud-policy-advisor
  labels:
    app: sysdigcloud
    role: policy-advisor
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8132
  selector:
    app: sysdigcloud
    role: policy-advisor
